@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: rawip.c,v $ $Name:  $($Revision: 0.9.2.31 $) $Date: 2006/07/08 09:37:51 $
+ @(#) $RCSfile: rawip.c,v $ $Name:  $($Revision: 0.9.2.32 $) $Date: 2006/07/15 05:40:35 $
 
  -----------------------------------------------------------------------------
 
@@ -45,11 +45,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2006/07/08 09:37:51 $ by $Author: brian $
+ Last Modified $Date: 2006/07/15 05:40:35 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: rawip.c,v $
+ Revision 0.9.2.32  2006/07/15 05:40:35  brian
+ - converted 2.4 inet protocol hooks to 2.6 style
+
  Revision 0.9.2.31  2006/07/08 09:37:51  brian
  - handle old SLES 9 2.6.5 kernel (untested)
 
@@ -146,10 +149,10 @@
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: rawip.c,v $ $Name:  $($Revision: 0.9.2.31 $) $Date: 2006/07/08 09:37:51 $"
+#ident "@(#) $RCSfile: rawip.c,v $ $Name:  $($Revision: 0.9.2.32 $) $Date: 2006/07/15 05:40:35 $"
 
 static char const ident[] =
-    "$RCSfile: rawip.c,v $ $Name:  $($Revision: 0.9.2.31 $) $Date: 2006/07/08 09:37:51 $";
+    "$RCSfile: rawip.c,v $ $Name:  $($Revision: 0.9.2.32 $) $Date: 2006/07/15 05:40:35 $";
 
 /*
  *  This driver provides a somewhat different approach to RAW IP that the inet
@@ -227,7 +230,7 @@ static char const ident[] =
 #define RAW_DESCRIP	"UNIX SYSTEM V RELEASE 4.2 FAST STREAMS FOR LINUX"
 #define RAW_EXTRA	"Part of the OpenSS7 Stack for Linux Fast-STREAMS"
 #define RAW_COPYRIGHT	"Copyright (c) 1997-2006  OpenSS7 Corporation.  All Rights Reserved."
-#define RAW_REVISION	"OpenSS7 $RCSfile: rawip.c,v $ $Name:  $($Revision: 0.9.2.31 $) $Date: 2006/07/08 09:37:51 $"
+#define RAW_REVISION	"OpenSS7 $RCSfile: rawip.c,v $ $Name:  $($Revision: 0.9.2.32 $) $Date: 2006/07/15 05:40:35 $"
 #define RAW_DEVICE	"SVR 4.2 STREAMS RAW IP Driver"
 #define RAW_CONTACT	"Brian Bidulock <bidulock@openss7.org>"
 #define RAW_LICENSE	"GPL"
