@@ -1,3 +1,8 @@
+2006-07-15  Brian Bidulock  <bidulock@openss7.org>
+
+	* acinclude.m4: added symbols for new inet protocol hooks
+	* src/drivers/np_ip.c: converted 2.4 inet protocol hooks to 2.6 style
+
 2006-07-13  Brian Bidulock  <bidulock@openss7.org>
 
 	* src/drivers/udp.c:
